chore: tag reader 반환 값 수정